# cpp-handle-container

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  bench.cpp  main.cpp  run-clang-format.bat  run-clang-tidy.bat  test.cpp  todo.md
include/thh-handle-vector/: handle-vector.hpp  handle-vector.inl
include/thh_handles/: thh_handles.hpp  thh_handles.inl
